tests/fails/f9.t

terra foo() : 3
end
foo()
